# etsy-niche-scout

./: .gitignore  README.md  pyproject.toml
config/: clustering.yaml  defaults.yaml  importers.yaml  scoring.yaml  selectors.yaml
scripts/: check_env.py  run_sample.sh  smoke_test.sh
src/etsy_niche_scout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/niche_scout/: __init__.py  cli.py  clustering.py  comparison.py  config.py  dashboard.py  etsy_client.py  exporters.py  family_analysis.py  importers.py  keyword_expansion.py  listing_extractor.py  logging.py  main.py  normalizer.py  recommender.py  schemas.py  scoring.py  serp_collector.py  utils.py
tests/: test_cli.py  test_clustering.py  test_comparison.py  test_exporters.py  test_family_analysis.py  test_importers.py  test_keyword_expansion.py  test_normalizer.py  test_pipeline.py  test_scoring.py
tests/fixtures/: erank_sample.csv  etsy_search_fragment.html  sample_scan.json
